Replace subscription buttons with updated styles

--- a/index.html
+++ b/index.html
@@ -741,10 +741,17 @@
         </a>
     </p>
 </div>
-        <div class="inline-flex bg-white/5 p-1 rounded-full border border-white/10 mb-16">
-           <button id="btnMonthly" class="px-8 py-2.5 rounded-full text-xs font-bold text-slate-500 hover:text-white transition-all" onclick="setCycle('monthly')">Monthly</button>
-           <button id="btnAnnual" class="px-8 py-2.5 rounded-full text-xs font-bold bg-white text-black shadow-lg transition-all" onclick="setCycle('annual')">Yearly (Save 50%)</button>
-        </div>
+        <div class="flex p-1 bg-white/5 rounded-full border border-white/10 w-fit mx-auto mb-12">
+    <button id="cycleMonthly" onclick="setCycle('monthly')" 
+            class="px-6 py-2 rounded-full text-xs font-bold transition-all bg-white text-black">
+        Monthly
+    </button>
+    
+    <button id="cycleYearly" onclick="setCycle('yearly')" 
+            class="px-6 py-2 rounded-full text-xs font-bold transition-all text-slate-400 hover:text-white">
+        Yearly <span class="ml-1 text-[9px] text-accent font-black uppercase tracking-tighter">Save 50%</span>
+    </button>
+</div>
 
         <div class="grid grid-cols-1 md:grid-cols-3 gap-8 max-w-6xl mx-auto items-stretch">
             <div class="perf-card p-10 text-left flex flex-col border-white/5 bg-white/[0.02]">
