Comment out remove button in index.html
Comment out the button for removing the parent element in index.html.

--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
         <input type="tel" id="leadWhatsapp" placeholder="WhatsApp Number" class="flex-1 md:w-40 bg-white/5 border border-white/10 rounded-lg px-3 py-2 text-xs text-white focus:border-cyan-400 outline-none placeholder:text-slate-600">
         <button onclick="submitLeadAndChat()" id="leadBtn" class="bg-cyan-400 text-black text-[10px] font-black px-4 py-2 rounded-lg whitespace-nowrap hover:bg-white hover:scale-105 transition-all">GET CODE</button>
     </div>
-    <button onclick="this.parentElement.remove()" class="absolute -top-2 -right-2 w-6 h-6 bg-black border border-white/20 rounded-full text-[10px] flex items-center justify-center text-slate-400 hover:text-white">✕</button>
+   <!-- <button onclick="this.parentElement.remove()" class="absolute -top-2 -right-2 w-6 h-6 bg-black border border-white/20 rounded-full text-[10px] flex items-center justify-center text-slate-400 hover:text-white">✕</button>-->
 </div>
 
 
