--- a/index.html
+++ b/index.html
@@ -1070,7 +1070,7 @@
         <p class="text-slate-400 text-sm mb-6">Enter your WhatsApp number to receive best discounts.</p>
         
         <div class="space-y-4">
-            <input type="tel" id="whatsappInput" placeholder="+1 234 567 890" 
+            <input type="tel" id="whatsappInput" placeholder="+91 9786756453" 
                 class="w-full bg-white/5 border border-white/10 rounded-xl px-4 py-3 text-white focus:border-accent outline-none transition-all text-center text-lg tracking-wider">
             
             <button onclick="submitWhatsappNumber()" id="whatsappSubmitBtn" 
