--- a/index.html
+++ b/index.html
@@ -1067,7 +1067,7 @@
         </div>
         
         <h3 class="text-xl font-bold text-white mb-2">Final Step!</h3>
-        <p class="text-slate-400 text-sm mb-6">Enter your WhatsApp number to receive best discounts.</p>
+        <p class="text-slate-400 text-sm mb-6">Claim your 20% Discount</p>
         
         <div class="space-y-4">
             <input type="tel" id="whatsappInput" placeholder="+91 9786756453" 
