--- a/index.html
+++ b/index.html
@@ -1068,7 +1068,7 @@
                 <i class="fa-solid fa-shield-heart text-4xl text-accent animate-pulse"></i>
             </div>
             
-            <h3 class="text-2xl font-bold text-white mb-2 tracking-tight">Get Free Access</h3>
+            <h3 class="text-2xl font-bold text-white mb-2 tracking-tight">Get Access for Free Plan</h3>
             <p class="text-slate-400 text-sm mb-8 leading-relaxed">
                   Connect your WhatsApp to unlock <span class="text-white font-semibold">20 free interview responses every day</span>
             </p>
