--- a/index.html
+++ b/index.html
@@ -743,7 +743,7 @@
 </div>
         <div class="inline-flex bg-white/5 p-1 rounded-full border border-white/10 mb-16">
            <button id="btnMonthly" class="px-8 py-2.5 rounded-full text-xs font-bold text-slate-500 hover:text-white transition-all" onclick="setCycle('monthly')">Monthly</button>
-           <button id="btnAnnual" class="px-8 py-2.5 rounded-full text-xs font-bold bg-white text-black shadow-lg transition-all" onclick="setCycle('annual')">Yearly (Save 50%)</button>
+           <button id="btnQuarterly" class="px-8 py-2.5 rounded-full text-xs font-bold bg-white text-black shadow-lg transition-all" onclick="setCycle('quarterly')">Quarterly (Save 50%)</button>
         </div>
 
         <div class="grid grid-cols-1 md:grid-cols-3 gap-8 max-w-6xl mx-auto items-stretch">
