Refactor button styles for monthly and quarterly options

--- a/index.html
+++ b/index.html
@@ -1514,13 +1514,14 @@
 
     function setCycle(c){
         currentCycle=c;
-        const btnM=document.getElementById('btnMonthly'); const btnA=document.getElementById('btnAnnual');
+        const btnM=document.getElementById('btnMonthly'); 
+        const btnQ=document.getElementById('btnQuarterly');
         if(c==='monthly'){
-            btnM.className="px-6 py-2 rounded text-xs font-bold bg-white text-black transition"; 
-            btnA.className="px-6 py-2 rounded text-xs font-bold text-slate-500 hover:text-white transition";
+            btnM.className="px-8 py-2.5 rounded-full text-xs font-bold bg-white text-black shadow-lg transition-all"; 
+            btnQ.className="px-8 py-2.5 rounded-full text-xs font-bold text-slate-500 hover:text-white transition-all";
         } else {
-            btnA.className="px-6 py-2 rounded text-xs font-bold bg-white text-black transition"; 
-            btnM.className="px-6 py-2 rounded text-xs font-bold text-slate-500 hover:text-white transition";
+            btnQ.className="px-8 py-2.5 rounded-full text-xs font-bold bg-white text-black shadow-lg transition-all"; 
+            btnM.className="px-8 py-2.5 rounded-full text-xs font-bold text-slate-500 hover:text-white transition-all";
         }
         updatePricingUI();
     }
