Change billing cycle from monthly to quarterly

--- a/index.html
+++ b/index.html
@@ -1438,7 +1438,7 @@
     const BACKEND_URL="https://whis-backend.onrender.com";
     let currentUser = null; 
     
-    let currentCycle = 'monthly'; 
+    let currentCycle = 'quarterly';
     let currentTier = 'free';
     
     let PRICING_CONFIG = null, GOOGLE_CLIENT_ID = null;
