Improve formatPrice function input validation
Update formatPrice function to handle null and undefined values.

--- a/index.html
+++ b/index.html
@@ -1485,8 +1485,8 @@
         } catch(e){ console.error(e); }
     }
      
-    function formatPrice(amount, discount) {
-        if (!amount) return "...";
+function formatPrice(amount, discount) {
+        if (amount === null || amount === undefined || isNaN(amount)) return "...";
         
         let displayAmount = amount;
         let currencySymbol = "$";
