Replace button with link to explore enterprise options

--- a/index.html
+++ b/index.html
@@ -774,7 +774,7 @@
                     <p class="flex items-center gap-3"><i class="fa-solid fa-server text-slate-600"></i> Custom API Integrations</p>
                     <p class="flex items-center gap-3"><i class="fa-solid fa-file-contract text-slate-600"></i> Dedicated Account Manager</p>
                 </div>
-                <button onclick="openEnterpriseModal()" class="w-full py-4 rounded-xl border border-white/10 text-slate-300 hover:bg-white/5 text-[10px] font-bold uppercase tracking-widest transition-all">Talk to Team</button>
+                <a href="enterprise.html" class="w-full block text-center py-4 rounded-xl border border-white/10 text-slate-300 hover:bg-white/5 text-[10px] font-bold uppercase tracking-widest transition-all">Explore Enterprise</a>
             </div>
 
         </div>
@@ -1632,7 +1632,7 @@
     function openProfileModal(){if(currentUser)fetchUserStatus();profileModal.classList.remove('hidden');profileModal.classList.add('flex');}
     function closeProfileModal(){profileModal.classList.add('hidden');profileModal.classList.remove('flex');}
 
-    // ENTERPRISE MODAL LOGIC
+    // ENTERPRISE MODAL LOGIC (KEPT IN CODEBASE AS REQUESTED, THOUGH NOT TRIGGERED)
     function openEnterpriseModal() { 
         document.getElementById('enterpriseModal').classList.remove('hidden'); 
         document.getElementById('enterpriseModal').classList.add('flex'); 
