--- a/index.html
+++ b/index.html
@@ -765,7 +765,7 @@
                 <button id="btnElite" disabled onclick="initiatePayment('pro_plus')" class="w-full py-4 rounded-xl bg-accent text-black hover:brightness-110 text-[10px] font-bold uppercase tracking-widest transition-all shadow-[0_0_30px_rgba(0,242,255,0.2)]">Go Elite</button>
             </div>
 
-            <div class="perf-card p-10 text-left flex flex-col border-white/5 bg-white/[0.02]">
+            <!--<div class="perf-card p-10 text-left flex flex-col border-white/5 bg-white/[0.02]">
                 <h3 class="text-[10px] font-bold text-slate-500 uppercase tracking-[0.2em] mb-4">Enterprise</h3>
                 <div class="text-3xl font-bold text-white mb-8">Custom</div>
                 <div class="space-y-5 text-xs text-slate-400 mb-10 flex-grow">
@@ -775,7 +775,7 @@
                     <p class="flex items-center gap-3"><i class="fa-solid fa-file-contract text-slate-600"></i> Dedicated Account Manager</p>
                 </div>
                 <a href="enterprise.html" class="w-full block text-center py-4 rounded-xl border border-white/10 text-slate-300 hover:bg-white/5 text-[10px] font-bold uppercase tracking-widest transition-all">Explore Enterprise</a>
-            </div>
+            </div>-->
 
         </div>
 
