--- a/index.html
+++ b/index.html
@@ -1303,7 +1303,7 @@
 
     const BACKEND_URL="https://whis-backend.onrender.com";
     let currentUser = null; 
-    let currentCycle = 'quarterly'; 
+    let currentCycle = 'monthly'; 
     let currentTier = 'free';
     
     let PRICING_CONFIG = null, GOOGLE_CLIENT_ID = null;
