--- a/enterprise.html
+++ b/enterprise.html
@@ -106,7 +106,7 @@
         The ultimate <span class="text-accent-gradient">co-pilot</span> <br class="hidden md:block" />for elite engineering teams.
       </h1>
       <p class="text-lg md:text-xl text-slate-400 max-w-3xl mx-auto leading-relaxed font-light mb-10">
-        Deploy Whis-AI across your entire organization. Accelerate developer onboarding, standardize technical interviews, and unblock your engineering pipeline with real-time, context-aware intelligence.
+        Deploy Whis-AI across your entire organization. Accelerate developer onboarding, resolve complex bugs instantly, and unblock your engineering pipeline with real-time, context-aware intelligence.
       </p>
       <div class="flex flex-col sm:flex-row items-center gap-4 w-full sm:w-auto">
           <a href="#contact-sales" class="w-full sm:w-auto px-8 py-4 rounded-xl bg-accent text-black text-sm font-bold uppercase tracking-widest hover:brightness-110 transition-all shadow-[0_0_30px_rgba(0,242,255,0.2)]">
@@ -125,8 +125,8 @@
                 <div class="text-[10px] text-slate-400 uppercase tracking-widest font-semibold">Faster Onboarding</div>
             </div>
             <div class="bg-black/80 backdrop-blur-xl p-8 text-center flex flex-col justify-center">
-                <div class="text-3xl md:text-4xl font-bold text-white mb-2">100%</div>
-                <div class="text-[10px] text-slate-400 uppercase tracking-widest font-semibold">Interview Consistency</div>
+                <div class="text-3xl md:text-4xl font-bold text-white mb-2">10x</div>
+                <div class="text-[10px] text-slate-400 uppercase tracking-widest font-semibold">Faster Debugging</div>
             </div>
             <div class="bg-black/80 backdrop-blur-xl p-8 text-center flex flex-col justify-center">
                 <div class="text-3xl md:text-4xl font-bold text-white mb-2">SOC2</div>
@@ -146,16 +146,16 @@
           <div class="flex flex-col md:flex-row items-center gap-16">
               <div class="w-full md:w-1/2 space-y-6">
                   <div class="w-12 h-12 rounded-xl bg-accent/10 flex items-center justify-center text-accent mb-6 border border-accent/20">
-                      <i class="fa-solid fa-users-viewfinder text-xl"></i>
+                      <i class="fa-solid fa-bug-slash text-xl"></i>
                   </div>
-                  <h2 class="text-3xl md:text-4xl font-bold text-white tracking-tight">Standardize Technical Interviews</h2>
+                  <h2 class="text-3xl md:text-4xl font-bold text-white tracking-tight">Unblock Engineers in Real-Time</h2>
                   <p class="text-lg text-slate-400 leading-relaxed font-light">
-                      Remove unconscious bias and inconsistency from your hiring pipeline. Whis-AI listens to candidate responses in real-time, providing interviewers with live rubrics, dynamic follow-up questions, and objective scoring metrics.
+                      Eliminate hours spent stuck on obscure bugs or complex architectural decisions. Whis-AI acts as an elite pair programmer that sees your screen, understands your tech stack, and provides instant, actionable solutions to keep your team shipping.
                   </p>
                   <ul class="space-y-4 pt-4">
-                      <li class="flex items-center gap-4 text-sm text-slate-300"><i class="fa-solid fa-check text-accent"></i> Real-time candidate code analysis</li>
-                      <li class="flex items-center gap-4 text-sm text-slate-300"><i class="fa-solid fa-check text-accent"></i> Hidden from Zoom/Teams participants</li>
-                      <li class="flex items-center gap-4 text-sm text-slate-300"><i class="fa-solid fa-check text-accent"></i> Automated post-interview summarization</li>
+                      <li class="flex items-center gap-4 text-sm text-slate-300"><i class="fa-solid fa-check text-accent"></i> Live, context-aware debugging</li>
+                      <li class="flex items-center gap-4 text-sm text-slate-300"><i class="fa-solid fa-check text-accent"></i> Instant architecture brainstorming</li>
+                      <li class="flex items-center gap-4 text-sm text-slate-300"><i class="fa-solid fa-check text-accent"></i> Reduces expensive context switching</li>
                   </ul>
               </div>
               <div class="w-full md:w-1/2">
@@ -166,11 +166,11 @@
                               <div class="w-3 h-3 rounded-full bg-red-500"></div>
                               <div class="w-3 h-3 rounded-full bg-yellow-500"></div>
                               <div class="w-3 h-3 rounded-full bg-green-500"></div>
-                              <div class="text-[10px] text-slate-500 font-mono ml-2">Whis-AI Live Analysis</div>
+                              <div class="text-[10px] text-slate-500 font-mono ml-2">Whis-AI Live Session</div>
                           </div>
                           <div class="space-y-3 font-mono text-xs">
-                              <div class="text-slate-400">Candidate: "I would use a nested loop here..."</div>
-                              <div class="text-accent bg-accent/10 p-2 rounded border border-accent/20">Suggestion: Ask about Big O notation. A nested loop results in O(n²) time complexity. Can they optimize to O(n) using a Hash Map?</div>
+                              <div class="text-slate-400">Engineer: "Why is the auth token coming back undefined during the initial render?"</div>
+                              <div class="text-accent bg-accent/10 p-2 rounded border border-accent/20">Whis-AI: Your useEffect dependency array is missing the auth state. Wrap the token check in a useCallback to prevent a race condition before the promise resolves.</div>
                           </div>
                       </div>
                   </div>
@@ -189,7 +189,7 @@
                   <ul class="space-y-4 pt-4">
                       <li class="flex items-center gap-4 text-sm text-slate-300"><i class="fa-solid fa-check text-purple-400"></i> Seamless GitHub/GitLab Integration</li>
                       <li class="flex items-center gap-4 text-sm text-slate-300"><i class="fa-solid fa-check text-purple-400"></i> Understands internal microservices</li>
-                      <li class="flex items-center gap-4 text-sm text-slate-300"><i class="fa-solid fa-check text-purple-400"></i> Reduces senior developer interruption time</li>
+                      <li class="flex items-center gap-4 text-sm text-slate-300"><i class="fa-solid fa-check text-purple-400"></i> Saves senior developers from constant interruptions</li>
                   </ul>
               </div>
               <div class="w-full md:w-1/2">
