--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
         <a href="#testimonials" class="px-4 py-2 text-xs font-semibold text-slate-400 hover:text-white rounded-full transition">Reviews</a>
         <a href="#pricing" class="px-4 py-2 text-xs font-semibold text-slate-400 hover:text-white rounded-full transition">Pricing</a>
         <a href="#faq" class="px-4 py-2 text-xs font-semibold text-slate-400 hover:text-white rounded-full transition">FAQ</a>
-        <a href="enterprise.html" class="px-4 py-2 text-xs font-semibold text-slate-400 hover:text-white rounded-full transition">Enterprise</a>
+        <a href="#enterprise" class="px-4 py-2 text-xs font-semibold text-slate-400 hover:text-white rounded-full transition">Enterprise</a>
       </div>
 
       <div class="flex items-center gap-5">
