--- a/enterprise.html
+++ b/enterprise.html
@@ -78,14 +78,14 @@
 
   <nav class="fixed top-0 w-full z-50 h-[80px] flex items-center justify-center glass-panel border-b-0">
     <div class="w-full max-w-7xl px-6 flex items-center justify-between">
-      <a href="index.html" class="flex items-center gap-3 group">
+      <a href="/" class="flex items-center gap-3 group">
         <svg width="28" height="28" viewBox="0 0 24 24" fill="none" class="text-accent group-hover:scale-110 transition-transform">
             <path d="M13 2L3 14h9l-1 8 10-12h-9l1-8z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
         </svg>
         <span class="text-xl font-bold tracking-tight text-white">Whis-AI <span class="text-[10px] text-accent font-bold ml-1 tracking-[0.2em] uppercase px-2 py-1 rounded-md bg-accent/10">Enterprise</span></span>
       </a>
       <div class="flex items-center gap-6">
-          <a href="index.html" class="hidden md:block text-sm font-medium text-slate-400 hover:text-white transition">Main Site</a>
+          <a href="index.html" class="hidden md:block text-sm font-medium text-slate-400 hover:text-white transition">Home</a>
           <a href="#contact-sales" class="px-5 py-2.5 rounded-lg bg-white text-black text-sm font-bold hover:bg-slate-200 transition-all shadow-[0_0_15px_rgba(255,255,255,0.2)]">Contact Sales</a>
       </div>
     </div>
