--- a/enterprise.html
+++ b/enterprise.html
@@ -74,7 +74,7 @@
         <span class="text-xl font-bold tracking-tight text-slate-900">Whis-AI <span class="text-[10px] text-primary font-bold ml-1 tracking-[0.2em] uppercase px-2 py-1 rounded-md bg-blue-50">Enterprise</span></span>
       </a>
       <div class="flex items-center gap-6">
-          <a href="/index.html" class="hidden md:block text-sm font-medium text-slate-500 hover:text-slate-900 transition">Main Site</a>
+          <a href="/index.html" class="hidden md:block text-sm font-medium text-slate-500 hover:text-slate-900 transition">Home</a>
           <a href="#contact-sales" class="px-5 py-2.5 rounded-lg bg-slate-900 text-white text-sm font-bold hover:bg-slate-800 transition-all shadow-md">Contact Sales</a>
       </div>
     </div>
