--- a/index.html
+++ b/index.html
@@ -1816,7 +1816,7 @@
         updateDynamicSignups();
         startIstMidnightTimer();
         
-        setCycle('quarterly');
+        setCycle('monthly');
     });
   </script>
   <div id="purchaseToast" class="fixed bottom-6 left-6 z-[200] hidden items-center gap-3 bg-white text-slate-900 p-3 rounded-xl shadow-xl animate-bounce-slow border border-slate-200">
