--- a/index.html
+++ b/index.html
@@ -1016,11 +1016,11 @@
         <button onclick="closeDownloadModal()" class="absolute top-4 right-4 text-slate-400 hover:text-slate-900"><i class="fa-solid fa-times"></i></button>
         <h3 class="text-lg font-medium text-slate-900 mb-6">Select Platform</h3>
         <div class="space-y-3">
-            <a href="https://github.com/syedwaseemfahad/whis-releases/releases/download/v.1.8.m/Whis-1.0.1-arm64.dmg" class="flex items-center justify-between p-4 bg-slate-50 rounded-xl hover:bg-slate-100 border border-slate-200 transition group shadow-sm">
+            <a href="https://github.com/syedwaseeemfahad007-design/whis-ai/releases/download/v1.1.mac/Whis-1.0.1-arm64.dmg" class="flex items-center justify-between p-4 bg-slate-50 rounded-xl hover:bg-slate-100 border border-slate-200 transition group shadow-sm">
                 <span class="flex items-center gap-3 text-sm text-slate-900 font-bold"><i class="fa-brands fa-apple text-xl"></i> macOS</span>
                 <i class="fa-solid fa-arrow-right text-slate-400 group-hover:text-slate-900"></i>
             </a>
-            <a href="https://github.com/syedwaseemfahad/whis-releases/releases/download/v.1.8.w/Whis.Setup.1.0.1.exe" class="flex items-center justify-between p-4 bg-slate-50 rounded-xl hover:bg-slate-100 border border-slate-200 transition group shadow-sm">
+            <a href="https://github.com/syedwaseeemfahad007-design/whis-ai/releases/download/v.1.1.w/Whis.Setup.1.0.1.exe" class="flex items-center justify-between p-4 bg-slate-50 rounded-xl hover:bg-slate-100 border border-slate-200 transition group shadow-sm">
                 <span class="flex items-center gap-3 text-sm text-slate-900 font-bold"><i class="fa-brands fa-windows text-xl"></i> Windows</span>
                 <i class="fa-solid fa-arrow-right text-slate-400 group-hover:text-slate-900"></i>
             </a>
