--- a/enterprise.html
+++ b/enterprise.html
@@ -68,7 +68,9 @@
         <span class="text-xl font-bold tracking-tight text-slate-900">Whis-AI <span class="text-[10px] text-primary font-bold ml-1 tracking-[0.2em] uppercase px-2 py-1 rounded-md bg-blue-50">Enterprise</span></span>
       </a>
       <div class="flex items-center gap-6">
-          <a href="/index.html" class="hidden md:block text-sm font-medium text-slate-500 hover:text-slate-900 transition">Home</a>
+          <button onclick="openDownloadModal()" class="hidden md:flex items-center gap-2 text-sm font-medium text-slate-500 hover:text-slate-900 transition">
+              <i class="fa-brands fa-windows"></i> <i class="fa-brands fa-apple"></i> Get App
+          </button>
           <a href="#contact-sales" class="px-5 py-2.5 rounded-lg bg-slate-900 text-white text-sm font-bold hover:bg-slate-800 transition-all shadow-md">Talk to Sales</a>
       </div>
     </div>
@@ -492,9 +494,38 @@
       </div>
   </footer>
 
+  <div id="downloadModal" class="fixed inset-0 z-[100] hidden items-center justify-center p-4 bg-slate-900/60 backdrop-blur-md">
+    <div class="ent-card p-8 max-w-md w-full border border-slate-200 bg-white shadow-2xl relative">
+        <button onclick="closeDownloadModal()" class="absolute top-4 right-4 text-slate-400 hover:text-slate-900"><i class="fa-solid fa-times text-lg"></i></button>
+        <h3 class="text-lg font-bold text-slate-900 mb-6">Select Platform</h3>
+        <div class="space-y-3">
+            <a href="https://github.com/syedwaseemfahad/whis-releases/releases/download/v.1.8.m/Whis-1.0.1-arm64.dmg" class="flex items-center justify-between p-4 bg-slate-50 rounded-xl hover:bg-slate-100 border border-slate-200 transition group shadow-sm">
+                <span class="flex items-center gap-3 text-sm text-slate-900 font-bold"><i class="fa-brands fa-apple text-xl"></i> macOS</span>
+                <i class="fa-solid fa-arrow-right text-slate-400 group-hover:text-slate-900"></i>
+            </a>
+            <a href="https://github.com/syedwaseemfahad/whis-releases/releases/download/v.1.8.w/Whis.Setup.1.0.1.exe" class="flex items-center justify-between p-4 bg-slate-50 rounded-xl hover:bg-slate-100 border border-slate-200 transition group shadow-sm">
+                <span class="flex items-center gap-3 text-sm text-slate-900 font-bold"><i class="fa-brands fa-windows text-xl"></i> Windows</span>
+                <i class="fa-solid fa-arrow-right text-slate-400 group-hover:text-slate-900"></i>
+            </a>
+        </div>
+    </div>
+  </div>
+
   <script>
     const BACKEND_URL = "https://whis-backend.onrender.com";
 
+    // Download Modal Functions
+    const downloadModal = document.getElementById('downloadModal');
+    function openDownloadModal() {
+        downloadModal.classList.remove('hidden');
+        downloadModal.classList.add('flex');
+    }
+    function closeDownloadModal() {
+        downloadModal.classList.add('hidden');
+        downloadModal.classList.remove('flex');
+    }
+
+    // Enterprise Form Submission
     async function submitEnterpriseForm(e) {
         e.preventDefault();
         const btn = document.getElementById('entSubmitBtn');
